@@ -80,6 +80,12 @@ binary-post-install/cups::
 	   install -D -m 644 debian/local/apparmor-profile debian/$(cdbs_curpkg)/etc/apparmor.d/usr.sbin.cupsd; \
 	   install -D -m 644 debian/local/cups.ufw.profile debian/$(cdbs_curpkg)/etc/ufw/applications.d/cups; \
 	   install -D -m 644 debian/local/apport-hook.py debian/$(cdbs_curpkg)/usr/share/apport/package-hooks/source_cups.py; \
+	else
+	   # Make the usb backend run as root, since /dev/bus/usb/* are
+	   # root:root in udev < 147, and cups does not use the usblp kernel
+	   # module any more; this is fixed in udev 147 (and thus in Ubuntu
+	   # 9.10), but not in Debian yet.
+	   chmod go-x debian/$(cdbs_curpkg)/usr/lib/cups/backend-available/usb
 	fi
 
 	# Install documentation of the PDF CUPS filters
@@ -97,9 +103,6 @@ binary-post-install/cups::
 	# Make the serial backend run as root, since /dev/ttyS* are
 	# root:dialout and thus not accessible as user lp
 	chmod go-x debian/$(cdbs_curpkg)/usr/lib/cups/backend-available/serial
-	# Make the usb backend run as root, since /dev/bus/usb/* are root:root,
-	# and cups does not use the usblp kernel module any more
-	chmod go-x debian/$(cdbs_curpkg)/usr/lib/cups/backend-available/usb
 
 binary-post-install/libcupsimage2-dev::
 	rm -r debian/libcupsimage2-dev/usr/share/doc/libcupsimage2-dev
