@@ -21,6 +21,8 @@ cups (1.4.1-2) UNRELEASED; urgency=low
   * debian/cups.init.d: Drop "cupsctl RIPCache" setting. It changes our
     conffile (causing dpkg prompts on upgrade), and overwrites the admin's
     setting without warning.
+  * debian/rules: Do not let the usb backend run as root in Ubuntu any more,
+    since that has a recent enough udev. Still keep it for Debian.
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 15 Sep 2009 17:14:10 +0200
 
